[BE] Add (temp) getFirstTrip function + add dockerfile
